# radicle-desktop

./: .dockerignore  .envrc  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.release  README.md  RELEASE.md  cooldown.toml  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  vite.config.ts
crates/radicle-tauri/: Cargo.toml  build.rs  main.desktop  tauri.conf.json  tauri.linux.conf.json
crates/radicle-tauri/bindings/: Comment.ts  Config.ts  CreateReviewComment.ts  Edit.ts  IssueAction.ts  IssueOp.ts  IssueOps.ts  NewIssueComment.ts  Review.ts  ReviewEdit.ts  Revision.ts  SupportedPayloads.ts
crates/radicle-tauri/bindings/cob/: CobOptions.ts  PaginatedQuery.ts  Reaction.ts  Stats.ts
crates/radicle-tauri/bindings/cob/issue/: Action.ts  CloseReason.ts  Issue.ts  IssueOps.ts  State.ts
crates/radicle-tauri/bindings/cob/patch/: Action.ts  ReviewEdit.ts  Revision.ts  State.ts
crates/radicle-tauri/bindings/cob/thread/: CodeLocation.ts  Comment.ts
crates/radicle-tauri/bindings/repo/: ProjectPayloadData.ts  ProjectPayloadMeta.ts  RepoInfo.ts  SupportedPayloads.ts  Visibility.ts
crates/radicle-tauri/bindings/serde_json/: JsonValue.ts
crates/radicle-tauri/capabilities/: default.json
crates/radicle-tauri/icons/: icon.icns
crates/radicle-tauri/src/: commands.rs  error.rs  lib.rs
crates/radicle-tauri/src/commands/: auth.rs  cob.rs  diff.rs  inbox.rs  init.rs  node.rs  profile.rs  repo.rs  startup.rs  thread.rs
crates/radicle-tauri/src/commands/cob/: draft.rs  issue.rs  job.rs  patch.rs  release.rs
crates/radicle-tauri/src/types/: cobs.rs  config.rs  mod.rs  repo.rs  thread.rs
crates/radicle-tauri/src/types/cobs/: issue.rs  patch.rs
crates/radicle-types/: Cargo.toml
crates/radicle-types/bindings/artifact/: ArtifactNodeStatus.ts
crates/radicle-types/bindings/cob/: Author.ts  CacheEvent.ts  DiffOptions.ts  Embed.ts  EmbedWithMimeType.ts  Never.ts  Operation.ts
crates/radicle-types/bindings/cob/inbox/: ActionWithAuthor.ts  Issue.ts  NotificationCount.ts  NotificationItem.ts  NotificationsByRepo.ts  Patch.ts  RefUpdate.ts  SetStatusNotifications.ts  TypedId.ts
crates/radicle-types/bindings/cob/issue/: Action.ts  Issue.ts  NewIssue.ts  Operation.ts  State.ts
crates/radicle-types/bindings/cob/patch/: Action.ts  CreateReviewArgs.ts  Edit.ts  Patch.ts  PatchCounts.ts  Review.ts  ReviewEdit.ts  ReviewInit.ts  Reviewer.ts  Revision.ts  State.ts  Verdict.ts
crates/radicle-types/bindings/cob/release/: Artifact.ts  ArtifactKind.ts  Location.ts  Redaction.ts  Release.ts
crates/radicle-types/bindings/cob/thread/: CodeRange.ts  Comment.ts  CreateReviewComment.ts  Embed.ts  NewIssueComment.ts  NewPatchComment.ts  Thread.ts
crates/radicle-types/bindings/config/: Config.ts
crates/radicle-types/bindings/diff/: Added.ts  Addition.ts  Copied.ts  Deleted.ts  Deletion.ts  Diff.ts  DiffContent.ts  DiffFile.ts  EofNewLine.ts  FileDiff.ts  FileMode.ts  FileStats.ts  Hunk.ts  Hunks.ts  Line.ts  Modification.ts  Modified.ts  Moved.ts  Stats.ts
crates/radicle-types/bindings/error/: CryptoErrorDiscriminants.ts  EmbedsErrorDiscriminants.ts  Error.ts  ErrorDiscriminants.ts  ErrorWrapper.ts  GitErrorDiscriminants.ts  IdentityErrorDiscriminants.ts  InboxErrorDiscriminants.ts  IssueErrorDiscriminants.ts  NodeErrorDiscriminants.ts  PatchErrorDiscriminants.ts  RepoErrorDiscriminants.ts
crates/radicle-types/bindings/repo/: Canonical.ts  Job.ts  ProjectPayload.ts  ProjectPayloadMeta.ts  Readme.ts  Remote.ts  RepoCount.ts  RepoInfo.ts  RepoRefs.ts  RepoSummary.ts  Run.ts  Status.ts  SyncStatus.ts  SyncedAt.ts  Tag.ts  TagRef.ts  Tagger.ts  Visibility.ts
crates/radicle-types/bindings/source/: Blob.ts  Commit.ts  Entry.ts  EntryKind.ts  Tree.ts
crates/radicle-types/bindings/syntax/: Label.ts  Line.ts  Paint.ts
crates/radicle-types/src/: artifact.rs  cobs.rs  config.rs  diff.rs  domain.rs  error.rs  lib.rs  oid.rs  outbound.rs  repo.rs  settings.rs  source.rs  syntax.rs  test.rs  thread.rs  traits.rs
crates/radicle-types/src/cobs/: diff.rs  issue.rs  job.rs  patch.rs  release.rs  repo.rs  stream.rs  thread.rs
crates/radicle-types/src/cobs/stream/: error.rs  iter.rs
crates/radicle-types/src/domain/: identity.rs  patch.rs
crates/radicle-types/src/domain/identity/: service.rs  traits.rs
crates/radicle-types/src/domain/inbox/: service.rs  traits.rs
crates/radicle-types/src/domain/issue/: service.rs  traits.rs
crates/radicle-types/src/domain/patch/: service.rs  traits.rs
crates/radicle-types/src/domain/repo/: models.rs  service.rs  traits.rs
crates/radicle-types/src/error/: auth.rs  cob.rs  crypto.rs  fs.rs  git.rs  inbox.rs  node.rs  repo.rs
crates/radicle-types/src/outbound/: radicle.rs  sqlite.rs
crates/radicle-types/src/source/: blob.rs  commit.rs  tree.rs
crates/radicle-types/src/traits/: auth.rs  cobs.rs  issue.rs  job.rs  patch.rs  release.rs  release_mut.rs  repo.rs  thread.rs
crates/test-http-api/: Cargo.toml
crates/test-http-api/src/: api.rs  error.rs  lib.rs  main.rs  registry.rs
crates/test-http-api/src/api/: identity.rs  inbox.rs  issue.rs  patch.rs  repo.rs  thread.rs
crates/test-http-api/src/api/identity/: handlers.rs  models.rs
crates/test-http-api/src/api/inbox/: handlers.rs  models.rs
crates/test-http-api/src/api/issue/: handlers.rs  models.rs
crates/test-http-api/src/api/patch/: handlers.rs  models.rs
crates/test-http-api/src/api/repo/: handlers.rs  models.rs
src/: main.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: CodeRange.ts  Comment.ts  Config.ts  Edit.ts  Issue.ts  Never.ts  NewIssue.ts  NewPatchComment.ts  Patch.ts  Reaction.ts  RepoInfo.ts  Review.ts  Revision.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  error.rs  events.rs  json.rs  lib.rs
src-tauri/src/commands/: auth.rs  cob.rs  cobs.rs  repo.rs  repos.rs  thread.rs
src-tauri/src/commands/cob/: issue.rs  patch.rs
src-tauri/src/types/: cobs.rs  config.rs  repo.rs
(+327 files in other folders)
