[package]
name = "radicle-tauri"
version = "0.0.0"
authors = ["Rudolfs Osins <rudolfs@osins.org>", "Sebastian Martinez <me@sebastinez.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
publish = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["isolation"] }

[dependencies]
anyhow = { version = "1.0" }
base64 = { version = "0.22" }
log = { version = "0.4" }
radicle = { version = "0.13.0" }
radicle-surf = { version = "0.22.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tauri = { version = "2.0", features = ["isolation"] }
tauri-plugin-clipboard-manager = { version = "2.0" }
tauri-plugin-devtools = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }
tauri-plugin-window-state = { version = "2.0" }
thiserror = { version = "1.0" }
ts-rs = { version = "9.0", features = ["serde-json-impl", "no-serde-warnings"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
