[package]
name = "radicle-types"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = { version = "1.0.90" }
axum = { version = "0.8.1", default-features = false, features = ["json"] }
base64 = { version = "0.22.1" }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
log = { version = "0.4.22" }
infer = { version = "0.19.0" }
mime-infer = { version = "3.0.0" }
radicle = { version = "0.24" }
radicle-job = { version = "0.6" }
radicle-localtime = { version = "0.1.0", features = ["serde"] }
radicle-surf = { version = "0.27.1", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
sqlite = { version = "0.37.0", features = ["bundled"] }
ssh-key = { version = "0.6.3" }
tauri = { version = "2.10.3", features = ["isolation"] }
tauri-plugin-clipboard-manager = { version = "2.3.2" }
tauri-plugin-fs = { version = "2.5.0" }
tempfile = { version = "3.19.0" }
thiserror = { version = "2.0.12" }
tree-sitter-bash = { version = "0.23.3" }
tree-sitter-c = { version = "0.23.2" }
tree-sitter-css = { version = "0.23.1" }
tree-sitter-diff = { version = "0.1.0" }
tree-sitter-go = { version = "0.23.4" }
tree-sitter-highlight = { version = "0.25.3" }
tree-sitter-html = { version = "0.23.2" }
tree-sitter-javascript = { version = "0.23.1" }
tree-sitter-jsdoc = { version = "0.23.2" }
tree-sitter-json = { version = "0.24.8" }
tree-sitter-md = { version = "0.3.2" }
tree-sitter-python = { version = "0.23.4" }
tree-sitter-regex = { version = "0.24.3" }
tree-sitter-ruby = { version = "0.23.1" }
tree-sitter-rust = { version = "0.23.2" }
tree-sitter-svelte-ng = { version = "1.0.2" }
tree-sitter-toml-ng = { version = "0.7.0" }
tree-sitter-typescript = { version = "0.23.2" }
ts-rs = { version = "12.0.1", features = [
    "serde-json-impl",
    "no-serde-warnings",
    "format",
] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
radicle = { version = "0.24", features = ["test"] }
