[package]
name = "test-http-api"
description = "HTTP Test API"
homepage = "https://radicle.xyz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.90" }
axum = { version = "0.7.5", default-features = false, features = ["json", "query", "tokio", "http1"] }
hyper = { version = "1.4", default-features = false }
lexopt = { version = "0.3.0" }
radicle = { git = "https://ash.radicle.garden/z3gqcJUoA1n9HaHKufZs5FCSGazv5.git", package = "radicle", rev = "7c902b6905724345ba850eb6cca8f8becc9a9c72" }
radicle-surf = { version = "0.22.1", default-features = false, features = ["serde"] }
radicle-types = { path = "../radicle-types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = { version = "1" }
tokio = { version = "1.40", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", default-features = false, features = ["cors", "set-header"] }
